Enhance: refactor AI summary generation to use NVIDIA API; update README and remove unused files

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,91 +1,12 @@
-altair
-annotated-types
-attrs
-blinker
-cachetools
-certifi
-charset-normalizer
-click
-colorama
-contourpy
-cycler
-dacite
-defusedxml
-et_xmlfile
-filelock
-filetype
-fonttools
+fpdf
 fpdf2
-fsspec
-gitdb
-GitPython
-huggingface-hub
-idna
-ImageHash
-Jinja2
-joblib
-jsonschema
-jsonschema-specifications
-kiwisolver
-llvmlite
-MarkupSafe
-matplotlib
-minify_html
-mpmath
-multimethod
-narwhals
-networkx
-numba
 numpy
-openpyxl
-packaging
 pandas
-patsy
-phik
-pillow
-plotly
-protobuf
-puremagic
-pyarrow
-pydantic
-pydantic_core
-pydeck
-pyparsing
-python-dateutil
-pytz
-PyWavelets
-PyYAML
-referencing
-regex
-requests
-rpds-py
-safetensors
-scikit-learn
-scipy
+python-dotenv
+Requests
 seaborn
-sentencepiece
-setuptools
-six
-smmap
-statsmodels
 streamlit
-sympy
-tenacity
-threadpoolctl
-tokenizers
-toml
-torch
-torchaudio
-torchvision
-tornado
-tqdm
-transformers
-typeguard
-typing-inspection
-typing_extensions
-tzdata
-urllib3
-visions
-watchdog
-wordcloud
-ydata-profiling
+streamlit
+ydata_profiling
+ydata_profiling
+matplotlib
